@@ -1,5 +1,10 @@
 2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>
 
+	* src/netspeed.c (update_quality_icon):
+	Make the scaling for the wireless inidcator logarithmic
+
+2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>
+
 	* src/netspeed.c (update_applet):
 	Patch by Marius Gedminas; Should fix #503518
 
